# opengl-wrapper

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini  new.txt
examples/: imgui_demo.cpp  main.cpp  multirender.cpp  single_render.cpp
include/: batchrenderer.h  gldebug.h  glwrap.h  indexbuffer.h  renderer.h  shader.h  texture.h  uniform.h  vertexarray.h  vertexbuffer.h  vertexbufferlayout.h
shaders/: shader.frag  shader.vert
src/: indexbuffer.cpp  main.cpp  renderer.cpp  shader.cpp  stb_image.cpp  texture.cpp  uniform.cpp  vertexarray.cpp  vertexbuffer.cpp
